--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.example.chartapplication"
         minSdk 21
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -52,12 +52,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Dagger
-    implementation "com.google.dagger:dagger-android:2.35.1"
-    implementation "com.google.dagger:dagger-android-support:2.35.1"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.35.1"
+    implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.dagger:dagger-android-support:2.35.1'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.35.1'
 
-    kapt "com.google.dagger:dagger-compiler:2.35.1"
-    kapt "com.google.dagger:dagger-android-processor:2.35.1"
+    kapt 'com.google.dagger:dagger-compiler:2.35.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.35.1'
 
     //Kotlin Android Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
